--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,9 @@
 	<title>Helo</title>
 </head>
 <body>
-	<h2>dilshan</h2>
+	<h2>dilshan pradeep</h2>
+	<p>my name is mahela pradeep dilshan</p>
+	<h1>helooo</h1>
+	
 </body>
 </html>
