--- a/site/index.html
+++ b/site/index.html
@@ -2,11 +2,27 @@
 <html>
 <head>
 	<title>Helo</title>
+	<style>
+		.highlight{
+			background-color: green;
+		}
+		p.highlight{
+			font-style: italic;
+		}
+		.highlight.mainpoint{
+			color: red;
+			background-color: black;
+		}
+
+
+	</style>
 </head>
 <body>
-	<h2>dilshan pradeep</h2>
-	<p>my name is mahela pradeep dilshan</p>
-	<h1>helooo</h1>
-	
+
+	<h1 class = "highlight">class with highlight</h1>
+	<p>paragraph with nothin</p>
+	<p class = "highlight"> p with highlight class</p>
+	<div class="mainpoint highlight"> div with mainpoint and hightligh class</div>
+
 </body>
 </html>
