--- a/site/index.html
+++ b/site/index.html
@@ -2,46 +2,54 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Two Column Design</title>
+<title>Media Queries</title>
 <style>
 
-*{
-	box-sizing: border-box;
+/********** Base styles **********/
+h1 {
+  margin-bottom: 15px;
 }
 
-div {
-  background-color: #00FFFF;
-}
 p {
-  width: 50%;
-  border: 2px solid black;
-  float: left;
-  padding:10px;
+  border: 1px solid black;
+  margin-bottom: 15px;
 }
-
 #p1 {
   background-color: #A52A2A;
+  width: 300px;
+  height: 300px;
 }
 #p2 {
   background-color: #DEB887;
+  width: 50px;
+  height: 50px;
 }
 
-section {
-  clear: left;
+/********** Large devices only **********/
+@media min-width:1200px{
+	#p1{
+		width:80%;
+		
+	}
+
+	#p2{
+		width: 150px;
+		height: 150px;
+	}
 }
+
+
+
+/********** Medium devices only **********/
 
 
 </style>
 </head>
 <body>
-<h1>Two Column Design</h1>
+<h1>Media Queries</h1>
 
-<div>
-  <p id="p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia distinctio aliquid cupiditate perferendis fuga, sit quasi alias vero sunt non, ratione earum dolores nihil! Consequuntur pariatur totam incidunt soluta expedita.</p>
-  <p id="p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta beatae voluptatibus veniam placeat iure unde assumenda porro neque voluptate esse sit magnam facilis labore odit, provident a ea! Nulla, minima.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nemo vitae, cupiditate odio magnam reprehenderit esse eum reiciendis repellendus incidunt sequi! Autem, laudantium, accusamus. Doloribus tempora alias minima laborum, provident!</p>
-  <section>This is regular content continuing after the the paragraph boxes.</section>
-</div>
-
+<p id="p1"></p>
+<p id="p2"></p>
 
 </body>
 </html>
