--- a/site/index.html
+++ b/site/index.html
@@ -1,64 +1,27 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>Media Queries</title>
-<style>
-
-/********** Base styles **********/
-h1 {
-  margin-bottom: 15px;
-}
-
-p {
-  border: 1px solid black;
-  margin-bottom: 15px;
-}
-#p1 {
-  background-color: #A52A2A;
-  width: 300px;
-  height: 300px;
-}
-#p2 {
-  background-color: #DEB887;
-  width: 50px;
-  height: 50px;
-}
-
-/********** Large devices only **********/
-@media (min-width:1200px){
-	#p1{
-		width:80%;
-	}
-
-	#p2{
-		width: 150px;
-		height: 150px;
-	}
-}
-
-
-
-/********** Medium devices only **********/
-@media (min-width:992px) and (max-width: 1199px){
-	#p1{
-		width:50%
-	}
-	#p2{
-		width: 100px;
-		height: 100px;
-	}
-}
-
-
-</style>
-</head>
+<!doctype html>
+<html lang="en">
+  <head>
+	<meta charset="utf-8">
+	<script src="js/script.js"></script>
+  </head>
 <body>
-<h1>Media Queries</h1>
+	<h1 id="title">Lecture 53</h1>
 
-<p id="p1"></p>
-<p id="p2"></p>
-	<h6>hello</h6>
+	<p>
+		Say hello to
+		<input type="text" id ="name">
+		
+		<button >
+			Say it</button>
+		
+			
+		
+	</p>
+  
+	<div id="content"></div>
 
+
+
+	
 </body>
 </html>
